@@ -1,3 +1,9 @@
+2009-08-20  Roland McGrath  <roland@redhat.com>
+
+	* c++/dwarf_comparator: Use tracker::subtracker for subcomparator.
+	Let mismatch hooks return bool that is true to keep comparing.
+	* c++/dwarf_tracker: Define subtracker.
+
 2009-08-19  Roland McGrath  <roland@redhat.com>
 
 	* c++/dwarf_tracker: Revamp derived tracker logic.
